--- a/DevFolio/assets/css/style.css
+++ b/DevFolio/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 body {
   background-color: #f5f5f5;
-  color: #4e4e4e;
+  color: #918f91;
 }
 
 h1,
@@ -23,13 +23,13 @@ h6 {
 }
 
 a {
-  color: #1e1e1e;
+  color: #e6dede;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
 
 a:hover {
-  color: #0078ff;
+  color: #EB4D4F;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -40,7 +40,7 @@ a:hover {
 
 .color-a {
   text-decoration: none;
-  color: #0078ff;
+  color: #EB4D4F;
 }
 
 .color-d {
@@ -57,13 +57,13 @@ a:hover {
 .work-box,
 .service-box,
 .paralax-mf {
-  box-shadow: 0 13px 8px -10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 13px 8px -10px rgba(245, 233, 233, 0.1);
 }
 
 .box-shadow-a,
 .button:hover {
   text-decoration: none;
-  box-shadow: 0 0 0 4px #cde1f8;
+  box-shadow: 0 0 0 4px #71BDB4;
 }
 
 .display-5 {
@@ -99,7 +99,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #EB4D4F;
 }
 
 .overlay-mf {
@@ -168,7 +168,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #EB4D4F;
   margin: 0 auto;
 }
 
@@ -186,7 +186,7 @@ a:hover {
   content: "";
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #a3a0a3;
   width: 100px;
   bottom: -12px;
 }
@@ -227,14 +227,14 @@ a:hover {
   border-radius: 50%;
   line-height: 1.6;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #eb4d4f;
   transition: all 500ms ease;
 }
 
 .socials .ico-circle:hover {
-  background-color: #0078ff;
+  background-color: #EA9595;
   color: #fff;
-  box-shadow: 0 0 0 3px #cde1f8;
+  box-shadow: 0 0 0 3px #71BDB4;
   transition: all 500ms ease;
 }
 
@@ -256,7 +256,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #0078ff;
+  color: #eb4d4f;
   margin-right: 10px;
 }
 
@@ -269,7 +269,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 10px#eb4d4f;
   display: block;
 }
 
@@ -287,15 +287,15 @@ a:hover {
   width: 18px;
   height: 7px;
   margin: 5px 5px;
-  background: #cde1f8;
-  border: 0px solid #cde1f8;
+  background: #F0CDA3;
+  border: 0px solid #71BDB4;
   display: block;
   transition: all 0.6s ease-in-out;
   cursor: pointer;
 }
 
 .owl-theme .owl-dots .owl-dot:hover span {
-  background-color: #cde1f8;
+  background-color: #71BDB4;
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
@@ -314,7 +314,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #0078ff;
+  background-color: #eb4d4f;
   opacity: 0.7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -338,7 +338,7 @@ a:hover {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0078ff;
+  background: #eb4d4f;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -352,7 +352,7 @@ a:hover {
 }
 
 .back-to-top:hover {
-  background: #298eff;
+  background: #eb4d4f;
   color: #fff;
 }
 
@@ -379,7 +379,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #eb4d4f;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -428,14 +428,14 @@ a:hover {
 }
 
 .button:hover {
-  background-color: #0062d3;
+  background-color: #eb4d4f;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .button-a {
   text-decoration: none;
-  background-color: #0078ff;
+  background-color: #eb4d4f;
   color: #fff;
   border-color: #cde1f8;
 }
@@ -596,7 +596,7 @@ a:hover {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #0078ff;
+  color: #eb4d4f;
 }
 
 .navbar .dropdown:hover>ul {
@@ -701,7 +701,7 @@ a:hover {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #0078ff;
+  color: #eb4d4f;
 }
 
 .navbar-mobile .getstarted,
@@ -736,7 +736,7 @@ a:hover {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #0078ff;
+  color: #eb4d4f;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -816,15 +816,15 @@ a:hover {
 
 .hero-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #eb4d4f;
 }
 
 .hero-single .breadcrumb .breadcrumb-item:before {
-  color: #cde1f8;
+  color: #f0a3cd;
 }
 
 .hero-single .breadcrumb .breadcrumb-item.active {
-  color: #cde1f8;
+  color: #eca7d7;
 }
 
 .hero-single .breadcrumb a {
@@ -859,7 +859,7 @@ a:hover {
 }
 
 .skill-mf .progress {
-  background-color: #cde1f8;
+  background-color: #d6d6d6;
   margin: 0.5rem 0 1.2rem 0;
   border-radius: 0;
   height: 0.7rem;
@@ -867,7 +867,7 @@ a:hover {
 
 .skill-mf .progress .progress-bar {
   height: 0.7rem;
-  background-color: #0078ff;
+  background-color: #eb4d4f;
 }
 
 /*--------------------------------------------------------------
@@ -884,8 +884,8 @@ a:hover {
 .service-box:hover .ico-circle {
   transition: all 500ms ease;
   color: #fff;
-  background-color: #0078ff;
-  box-shadow: 0 0 0 10px #cde1f8;
+  background-color: #eb4d4f;
+  box-shadow: 0 0 0 10px #71BDB4;
 }
 
 .service-box .service-ico {
@@ -938,7 +938,7 @@ a:hover {
   height: 60px;
   width: 60px;
   line-height: 1.5;
-  box-shadow: 0 0 0 10px #cde1f8;
+  box-shadow: 0 0 0 10px #F0CDA3;
 }
 
 .counter-num .counter {
@@ -961,6 +961,8 @@ a:hover {
 }
 
 .work-img {
+  width: 416px;
+  height: 300px;
   display: block;
   overflow: hidden;
 }
@@ -979,17 +981,17 @@ a:hover {
 }
 
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #eb4d4f;
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #eb4d4f;
   float: right;
 }
 
 .work-content .w-like a {
-  color: #0078ff;
+  color: #eb4d4f;
 }
 
 .work-content .w-like .num-like {
@@ -1021,15 +1023,16 @@ a:hover {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0078ff;
+  border: 1px solid #eb4d4f;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0078ff;
+  background-color: #eb4d4f;
 }
 
 .portfolio-details .portfolio-info {
   padding: 30px;
+  
   box-shadow: 0px 0 30px rgba(78, 78, 78, 0.08);
 }
 
@@ -1092,7 +1095,7 @@ a:hover {
 
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #0078ff;
+  color: #EB4D4F;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -1157,7 +1160,7 @@ a:hover {
 .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #EB4D4F;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1186,7 +1189,7 @@ a:hover {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #71BDB4;
   border-top-color: #eee;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -1201,7 +1204,7 @@ a:hover {
 
 .php-email-form input:focus,
 .php-email-form textarea:focus {
-  border-color: #0078ff;
+  border-color: #eb4d4f;
 }
 
 .php-email-form input {
@@ -1214,7 +1217,7 @@ a:hover {
 }
 
 .php-email-form button[type=submit] {
-  background: #0078ff;
+  background: #eb4d4f;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1222,7 +1225,7 @@ a:hover {
 }
 
 .php-email-form button[type=submit]:hover {
-  background: #3393ff;
+  background: #9e2424;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1273,7 +1276,7 @@ a:hover {
   color: #fff;
   padding: 0 15px 5px;
   overflow: hidden;
-  background-color: #0078ff;
+  background-color: #eb4d4f;
   border-radius: 4px;
 }
 
@@ -1342,7 +1345,7 @@ a:hover {
 }
 
 .blog-wrapper .post-meta ul {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #eb4d4f;
   margin-top: 1rem;
 }
 
@@ -1352,7 +1355,7 @@ a:hover {
 }
 
 .blog-wrapper .post-meta ul a {
-  color: #0078ff;
+  color: #eb4d4f;
 }
 
 .blog-wrapper .post-meta ul span {
@@ -1360,7 +1363,7 @@ a:hover {
 }
 
 .blog-wrapper .blockquote {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #eb4d4f;
   padding: 18px;
   font-style: italic;
 }
@@ -1397,7 +1400,7 @@ a:hover {
 }
 
 .box-comments .list-comments a {
-  color: #0078ff;
+  color: #eb4d4f;
 }
 
 .box-comments .list-comments span {
@@ -1413,7 +1416,7 @@ a:hover {
 .widget-sidebar .sidebar-title {
   font-size: 1.6rem;
   font-weight: 600;
-  border-left: 5px solid #0078ff;
+  border-left: 5px solid #eb4d4f;
   padding-left: 15px;
   text-transform: uppercase;
   margin-bottom: 1.5rem;
@@ -1430,7 +1433,7 @@ a:hover {
   width: 10px;
   height: 1px;
   left: 0;
-  background-color: #0078ff;
+  background-color: #eb4d4f;
   top: 20px;
 }
 
@@ -1441,8 +1444,8 @@ a:hover {
 }
 
 .sidebar-search .btn-search {
-  background-color: #0078ff;
-  border-color: #0078ff;
+  background-color: #eb4d4f;
+  border-color: #eb4d4f;
   border-radius: 0;
   padding-left: 20px;
   padding-right: 20px;
@@ -1450,7 +1453,7 @@ a:hover {
 
 .widget-tags ul li {
   display: inline-block;
-  background-color: #0078ff;
+  background-color: #eb4d4f;
   padding: 0.2rem 0.6rem;
   margin-bottom: 0.5rem;
   border-radius: 15px;
@@ -1467,7 +1470,7 @@ footer {
   text-align: center;
   color: #fff;
   padding: 25px 0;
-  background: #0062d3;
+  background: #EA9595;
 }
 
 footer .copyright {
